<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="eLEDColor" Id="{f1608143-f216-4bcd-b330-14113ac975f7}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE eLEDColor :
(
	Red,
	Green,
	Blue
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>